--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
+  "homepage": "https://alhousben.github.io/myportfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -47,6 +48,5 @@
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3"
-  },
-  "homepage": "https://alhousben.github.io/myportfolio"
+  }
 }
